--- a/JavaScript/로또 번호 추첨기/style.css
+++ b/JavaScript/로또 번호 추첨기/style.css
@@ -1,24 +1,32 @@
 h1 {
   margin-left: 70px;
+  font-size: 70px;
+}
+
+.balls {
 }
 
 .ball {
   float: left;
+  text-align: center;
+  vertical-align: middle;
+
   width: 60px;
   height: 60px;
   line-height: 60px;
-  font-size: 28px;
+
+  margin-right: 8px;
   border-radius: 100%;
-  text-align: center;
-  vertical-align: middle;
-  color: #fff;
-  font-weight: 500;
   text-shadow: 0px 0px 3px rgba(73, 57, 0, 0.8);
-  margin-right: 6px;
+
+  font-size: 28px;
+  font-weight: 500;
+  color: #fff;
 }
 
 .ball1 {
   background: #fbc400;
+  margin-left: 100px;
 }
 .ball2 {
   background: #69c8f2;
